django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-deployment
  labels:
    app: k8s-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      project: k8s_test
  template:
    metadata:
      labels:
        project: k8s_test
    spec:
      containers:
        - name: django
          image: k8s_test_django
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: dev
    owner: admin
spec:
  selector:
    project: k8s_test
  ports:
    - name: dajngo
      protocol: TCP
      port: 8080
      targetPort: 80
